# monty

./: .gitignore  CLAUDE.md  CODEBASE_REVIEW.md  Cargo.toml  Makefile  README.md  how-it-works.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
benches/: main.rs
crates/monty/: Cargo.toml
crates/monty-cli/: Cargo.toml
crates/monty/benches/: main.rs
crates/monty/src/: args.rs  callable.rs  evaluate.rs  exception.rs  exception_private.rs  exceptions.rs  executor.rs  expressions.rs  for_iterator.rs  fstring.rs  function.rs  heap.rs  intern.rs  lib.rs  namespace.rs  object.rs  parse.rs  parse_error.rs  position.rs  prepare.rs  resource.rs  run_frame.rs  value.rs
crates/monty/src/bytecode/vm/: mod.rs
crates/monty/src/types/: bytes.rs  dict.rs  list.rs  range.rs  set.rs  str.rs  tuple.rs
crates/monty/test_cases/: ext_call__basic.py  ext_call__exc.py  ext_call__for.py  ext_call__if.py  function__ops.py  id__str_literals_distinct.py  nonlocal__error_module_level.py  version__cpython.py
crates/monty/tests/: binary_serde.rs  bug_reproductions.rs  datatest_runner.rs  inputs.rs  iter.rs  json_serde.rs  parse_errors.rs  print_writer.rs  resource_limits.rs
scripts/: startup_performance.py
src/: args.rs  bin.rs  builtins.rs  callable.rs  evaluate.rs  exceptions.rs  exit.rs  expressions.rs  fstring.rs  function.rs  heap.rs  intern.rs  lib.rs  namespace.rs  object.rs  object_types.rs  operators.rs  parse.rs  parse_error.rs  prepare.rs  run.rs  value.rs
test_cases/: list__getitem.py  list__getitem_negative.py  tuple__getitem.py  tuple__getitem_negative.py
tests/: main.rs  parse_errors.rs  syntax-cases.toml
(+11 files in other folders)
