[package]
name = "monty"
version = "0.1.0"
edition = "2021"

[lib]
name = "monty"
path = "src/lib.rs"

[[bin]]
name = "monty"
path = "src/bin.rs"
unittests = false

[dependencies]
rustpython-parser = { git = "https://github.com/charliermarsh/RustPython.git", rev = "c3147d2c1524ebd0e90cf1c2938d770314fd5a5a" }
ahash = "0.8.0"
num = "0.4.0"

[dev-dependencies]
serde = {version = "1.0.163", features = ["derive"]}
toml = "0.7.4"
